sumo/tests/sumo/output/e1/errors/id_empty/errors.sumo
Error: Attribute 'id' in definition of a e1Detector is empty.
Quitting (on error).
